# fastapi-sandbox

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
scripts/: run.sh
src/fastapi_sandbox/: __init__.py  main.py
src/fastapi_sandbox/routers/: accounts.py
src/fastapi_sandbox/routers/chat/: apps.py  chat_messages.py  conversations.py  files.py  messages.py
src/fastapi_sandbox/routers/chat_ai/: chat_messages.py
