[project]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yu Kobayashi", email = "yukob.formal@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "gunicorn>=22.0.0",
    "uvicorn>=0.30.0",
    "passlib>=1.7.4",
    "pyjwt>=2.8.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_sandbox"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # mccabe
    "C",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    # "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # Pylint
    "PL",
]
ignore = [
    "E203",
    "D211",
    "D212",
]
